crates/testing/sysml-spec-tests/tests/snapshots/cross_transport_identity_baseline__parity_coffee_definitions.snap
---
source: crates/testing/sysml-spec-tests/tests/cross_transport_identity_baseline.rs
assertion_line: 891
expression: bundle
---
{
  "cache_status": {
    "crate_version":<V>,
    "element_count":<N>,
    "exists":<B>,
    "size_bytes":<N>
  },
  "code_action_list": [
    {
      "diagnostics": [
        {
          "code": "E200",
          "col_end": 4,
          "col_start": 4,
          "line_end": 17,
          "line_start": 17,
          "message": "Unresolved reference 'Real' for property 'general'"
        }
      ],
      "edits": [
        {
          "edits": [
            {
              "col_end": 0,
              "col_start": 0,
              "line_end": 4,
              "line_start": 4,
              "new_text": "import ScalarValues::Real;\n"
            }
          ],
          "uri": "file://<WS>/examples/the-book-corpus/coffee-machine/definitions.sysml"
        }
      ],
      "is_preferred": true,
      "kind": "quickfix",
      "title": "Import Real (from ScalarValues::Real)"
    },
    {
      "diagnostics": [
        {
          "code": "E200",
          "col_end": 4,
          "col_start": 4,
          "line_end": 17,
          "line_start": 17,
          "message": "Unresolved reference 'Real' for property 'general'"
        }
      ],
      "edits": [
        {
          "edits": [
            {
              "col_end": 4,
              "col_start": 4,
              "line_end": 17,
              "line_start": 17,
              "new_text": "ScalarValues::Real"
            }
          ],
          "uri": "file://<WS>/examples/the-book-corpus/coffee-machine/definitions.sysml"
        }
      ],
      "kind": "quickfix",
      "title": "Use fully qualified name 'ScalarValues::Real'"
    },
    {
      "diagnostics": [
        {
          "code": "E200",
          "col_end": 4,
          "col_start": 4,
          "line_end": 17,
          "line_start": 17,
          "message": "Unresolved reference 'Real' for property 'general'"
        }
      ],
      "edits": [
        {
          "edits": [
            {
              "col_end": 0,
              "col_start": 0,
              "line_end": 33,
              "line_start": 33,
              "new_text": "\n    part def Real {}\n"
            }
          ],
          "uri": "file://<WS>/examples/the-book-corpus/coffee-machine/definitions.sysml"
        }
      ],
      "kind": "quickfix",
      "title": "Create part definition 'Real'"
    },
    {
      "edits": [
        {
          "edits": [
            {
              "col_end": 0,
              "col_start": 0,
              "line_end": 6,
              "line_start": 4,
              "new_text": "import SI::*;\nimport ScalarValues::*;\n"
            }
          ],
          "uri": "file://<WS>/examples/the-book-corpus/coffee-machine/definitions.sysml"
        }
      ],
      "kind": "source.organizeImports",
      "title": "Organize imports (sort alphabetically)"
    }
  ],
  "completion_resolve": {},
  "dependency_status_empty": {
    "roots": [],
    "summary": {
      "failed_dependencies": 0,
      "hydrated_dependencies": 0,
      "hydrated_packages": 0,
      "hydrated_path_dependencies": 0,
      "invalid_dependencies": 0,
      "roots": 0,
      "total_dependencies": 0,
      "unsupported_dependencies": 0
    }
  },
  "diagram_edit_create": {
    "action": "create",
    "status_message": "Created PartDefinition in file://<WS>/examples/the-book-corpus/coffee-machine/definitions.sysml",
    "status_payload": {
      "elementType": "PartDefinition",
      "uri": "file://<WS>/examples/the-book-corpus/coffee-machine/definitions.sysml"
    },
    "uri": "file://<WS>/examples/the-book-corpus/coffee-machine/definitions.sysml",
    "workspace_edit": {
      "changes": [
        {
          "edits": [
            {
              "col_end": 0,
              "col_start": 0,
              "line_end": 80,
              "line_start": 80,
              "new_text": "    part def NewPart {\n    }\n\n"
            }
          ],
          "uri": "file://<WS>/examples/the-book-corpus/coffee-machine/definitions.sysml"
        }
      ]
    }
  },
  "fixture": "coffee_definitions",
  "format_document": [
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 4,
      "line_start": 4,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 5,
      "line_start": 5,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 7,
      "line_start": 7,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 8,
      "line_start": 8,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 9,
      "line_start": 9,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 10,
      "line_start": 10,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 11,
      "line_start": 11,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 13,
      "line_start": 13,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 14,
      "line_start": 14,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 15,
      "line_start": 15,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 16,
      "line_start": 16,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 17,
      "line_start": 17,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 18,
      "line_start": 18,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 20,
      "line_start": 20,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 21,
      "line_start": 21,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 22,
      "line_start": 22,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 24,
      "line_start": 24,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 25,
      "line_start": 25,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 26,
      "line_start": 26,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 27,
      "line_start": 27,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 28,
      "line_start": 28,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 29,
      "line_start": 29,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 30,
      "line_start": 30,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 32,
      "line_start": 32,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 33,
      "line_start": 33,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 35,
      "line_start": 35,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 36,
      "line_start": 36,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 38,
      "line_start": 38,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 39,
      "line_start": 39,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 40,
      "line_start": 40,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 42,
      "line_start": 42,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 43,
      "line_start": 43,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 45,
      "line_start": 45,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 46,
      "line_start": 46,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 47,
      "line_start": 47,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 48,
      "line_start": 48,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 50,
      "line_start": 50,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 51,
      "line_start": 51,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 52,
      "line_start": 52,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 53,
      "line_start": 53,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 55,
      "line_start": 55,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 56,
      "line_start": 56,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 57,
      "line_start": 57,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 58,
      "line_start": 58,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 60,
      "line_start": 60,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 61,
      "line_start": 61,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 62,
      "line_start": 62,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 63,
      "line_start": 63,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 65,
      "line_start": 65,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 66,
      "line_start": 66,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 67,
      "line_start": 67,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 69,
      "line_start": 69,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 70,
      "line_start": 70,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 71,
      "line_start": 71,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 73,
      "line_start": 73,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 74,
      "line_start": 74,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 75,
      "line_start": 75,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 76,
      "line_start": 76,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 77,
      "line_start": 77,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 78,
      "line_start": 78,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 79,
      "line_start": 79,
      "new_text": ""
    }
  ],
  "rename_apply": {
    "apply": {
      "changes": [
        {
          "edits": [
            {
              "col_end": 26,
              "col_start": 4,
              "line_end": 17,
              "line_start": 17,
              "new_text": "RenamedForParityT19"
            }
          ],
          "uri": "file://<WS>/examples/the-book-corpus/coffee-machine/definitions.sysml"
        }
      ]
    }
  },
  "rename_prepare": {
    "prepare": {
      "col_end": 26,
      "col_start": 4,
      "line_end": 17,
      "line_start": 17,
      "placeholder": "BrewedCoffee"
    }
  },
  "salsa_stats": {
    "executions":<N>,
    "hit_ratio":<F>,
    "validations":<N>
  },
  "salsa_stats_reset": {
    "status": "reset"
  },
  "workspace_files_depth_2": {
    "entries": [
      {
        "name": "actions.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/actions.sysml",
        "type": "file"
      },
      {
        "name": "book-views.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/book-views.sysml",
        "type": "file"
      },
      {
        "name": "brew-cycle-flow.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/brew-cycle-flow.sysml",
        "type": "file"
      },
      {
        "name": "calculations.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/calculations.sysml",
        "type": "file"
      },
      {
        "name": "connections.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/connections.sysml",
        "type": "file"
      },
      {
        "name": "definitions.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/definitions.sysml",
        "type": "file"
      },
      {
        "name": "demo-analysis.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/demo-analysis.sysml",
        "type": "file"
      },
      {
        "name": "flows.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/flows.sysml",
        "type": "file"
      },
      {
        "name": "metadata.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/metadata.sysml",
        "type": "file"
      },
      {
        "name": "orchestration.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/orchestration.sysml",
        "type": "file"
      },
      {
        "name": "package-structure.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/package-structure.sysml",
        "type": "file"
      },
      {
        "name": "ports-and-interfaces.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/ports-and-interfaces.sysml",
        "type": "file"
      },
      {
        "name": "requirements.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/requirements.sysml",
        "type": "file"
      },
      {
        "name": "states.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/states.sysml",
        "type": "file"
      },
      {
        "name": "typing-and-specialization.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/typing-and-specialization.sysml",
        "type": "file"
      },
      {
        "name": "views.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/views.sysml",
        "type": "file"
      }
    ],
    "root": "<WS>/examples/the-book-corpus/coffee-machine"
  },
  "workspace_refresh_empty": {
    "projects": [],
    "roots_count": 0,
    "stdlib_loaded": false
  }
}
