crates/testing/sysml-spec-tests/tests/snapshots/cross_transport_identity_baseline__parity_coffee_views.snap
---
source: crates/testing/sysml-spec-tests/tests/cross_transport_identity_baseline.rs
assertion_line: 885
expression: bundle
---
{
  "cache_status": {
    "crate_version":<V>,
    "element_count":<N>,
    "exists":<B>,
    "size_bytes":<N>
  },
  "code_action_list": [
    {
      "diagnostics": [
        {
          "code": "E200",
          "col_end": 4,
          "col_start": 4,
          "line_end": 109,
          "line_start": 109,
          "message": "Unresolved reference 'Real' for property 'general'"
        }
      ],
      "edits": [
        {
          "edits": [
            {
              "col_end": 0,
              "col_start": 0,
              "line_end": 11,
              "line_start": 11,
              "new_text": "import ScalarValues::Real;\n"
            }
          ],
          "uri": "file://<BOOK>/examples/coffee-machine/views.sysml"
        }
      ],
      "is_preferred": true,
      "kind": "quickfix",
      "title": "Import Real (from ScalarValues::Real)"
    },
    {
      "diagnostics": [
        {
          "code": "E200",
          "col_end": 4,
          "col_start": 4,
          "line_end": 109,
          "line_start": 109,
          "message": "Unresolved reference 'Real' for property 'general'"
        }
      ],
      "edits": [
        {
          "edits": [
            {
              "col_end": 4,
              "col_start": 4,
              "line_end": 109,
              "line_start": 109,
              "new_text": "ScalarValues::Real"
            }
          ],
          "uri": "file://<BOOK>/examples/coffee-machine/views.sysml"
        }
      ],
      "kind": "quickfix",
      "title": "Use fully qualified name 'ScalarValues::Real'"
    },
    {
      "diagnostics": [
        {
          "code": "E200",
          "col_end": 4,
          "col_start": 4,
          "line_end": 109,
          "line_start": 109,
          "message": "Unresolved reference 'Real' for property 'general'"
        }
      ],
      "edits": [
        {
          "edits": [
            {
              "col_end": 0,
              "col_start": 0,
              "line_end": 111,
              "line_start": 111,
              "new_text": "\n    part def Real {}\n"
            }
          ],
          "uri": "file://<BOOK>/examples/coffee-machine/views.sysml"
        }
      ],
      "kind": "quickfix",
      "title": "Create part definition 'Real'"
    },
    {
      "edits": [
        {
          "edits": [
            {
              "col_end": 32,
              "col_start": 30,
              "line_end": 109,
              "line_start": 109,
              "new_text": "specializes"
            }
          ],
          "uri": "file://<BOOK>/examples/coffee-machine/views.sysml"
        }
      ],
      "kind": "refactor.rewrite",
      "title": "Convert ':>' to 'specializes'"
    },
    {
      "edits": [
        {
          "edits": [
            {
              "col_end": 32,
              "col_start": 30,
              "line_end": 109,
              "line_start": 109,
              "new_text": "subsets"
            }
          ],
          "uri": "file://<BOOK>/examples/coffee-machine/views.sysml"
        }
      ],
      "kind": "refactor.rewrite",
      "title": "Convert ':>' to 'subsets'"
    }
  ],
  "completion_resolve": {
    "documentation_markdown": "4) Action-flow view — the brew cycle, ordered by control flow.\nDifferent supertype, different shape; no other change."
  },
  "dependency_status_empty": {
    "roots": [],
    "summary": {
      "failed_dependencies": 0,
      "hydrated_dependencies": 0,
      "hydrated_packages": 0,
      "hydrated_path_dependencies": 0,
      "invalid_dependencies": 0,
      "roots": 0,
      "total_dependencies": 0,
      "unsupported_dependencies": 0
    }
  },
  "diagram_edit_create": {
    "action": "create",
    "status_message": "Created PartDefinition in file://<BOOK>/examples/coffee-machine/views.sysml",
    "status_payload": {
      "elementType": "PartDefinition",
      "uri": "file://<BOOK>/examples/coffee-machine/views.sysml"
    },
    "uri": "file://<BOOK>/examples/coffee-machine/views.sysml",
    "workspace_edit": {
      "changes": [
        {
          "edits": [
            {
              "col_end": 0,
              "col_start": 0,
              "line_end": 124,
              "line_start": 124,
              "new_text": "    part def NewPart {\n    }\n\n"
            }
          ],
          "uri": "file://<BOOK>/examples/coffee-machine/views.sysml"
        }
      ]
    }
  },
  "fixture": "coffee_views",
  "format_document": [
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 11,
      "line_start": 11,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 12,
      "line_start": 12,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 14,
      "line_start": 14,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 15,
      "line_start": 15,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 16,
      "line_start": 16,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 17,
      "line_start": 17,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 19,
      "line_start": 19,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 20,
      "line_start": 20,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 21,
      "line_start": 21,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 23,
      "line_start": 23,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 24,
      "line_start": 24,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 25,
      "line_start": 25,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 26,
      "line_start": 26,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 28,
      "line_start": 28,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 29,
      "line_start": 29,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 30,
      "line_start": 30,
      "new_text": ""
    },
    {
      "col_end": 13,
      "col_start": 0,
      "line_end": 31,
      "line_start": 31,
      "new_text": ""
    },
    {
      "col_end": 13,
      "col_start": 0,
      "line_end": 32,
      "line_start": 32,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 33,
      "line_start": 33,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 35,
      "line_start": 35,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 36,
      "line_start": 36,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 37,
      "line_start": 37,
      "new_text": ""
    },
    {
      "col_end": 13,
      "col_start": 0,
      "line_end": 38,
      "line_start": 38,
      "new_text": ""
    },
    {
      "col_end": 13,
      "col_start": 0,
      "line_end": 39,
      "line_start": 39,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 40,
      "line_start": 40,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 42,
      "line_start": 42,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 43,
      "line_start": 43,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 44,
      "line_start": 44,
      "new_text": ""
    },
    {
      "col_end": 13,
      "col_start": 0,
      "line_end": 45,
      "line_start": 45,
      "new_text": ""
    },
    {
      "col_end": 13,
      "col_start": 0,
      "line_end": 46,
      "line_start": 46,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 47,
      "line_start": 47,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 49,
      "line_start": 49,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 50,
      "line_start": 50,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 51,
      "line_start": 51,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 53,
      "line_start": 53,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 54,
      "line_start": 54,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 56,
      "line_start": 56,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 57,
      "line_start": 57,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 58,
      "line_start": 58,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 59,
      "line_start": 59,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 60,
      "line_start": 60,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 62,
      "line_start": 62,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 63,
      "line_start": 63,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 64,
      "line_start": 64,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 65,
      "line_start": 65,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 66,
      "line_start": 66,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 67,
      "line_start": 67,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 68,
      "line_start": 68,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 70,
      "line_start": 70,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 71,
      "line_start": 71,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 72,
      "line_start": 72,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 74,
      "line_start": 74,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 75,
      "line_start": 75,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 76,
      "line_start": 76,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 77,
      "line_start": 77,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 78,
      "line_start": 78,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 79,
      "line_start": 79,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 80,
      "line_start": 80,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 81,
      "line_start": 81,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 82,
      "line_start": 82,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 83,
      "line_start": 83,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 84,
      "line_start": 84,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 86,
      "line_start": 86,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 87,
      "line_start": 87,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 88,
      "line_start": 88,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 90,
      "line_start": 90,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 91,
      "line_start": 91,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 92,
      "line_start": 92,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 93,
      "line_start": 93,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 94,
      "line_start": 94,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 95,
      "line_start": 95,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 96,
      "line_start": 96,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 97,
      "line_start": 97,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 98,
      "line_start": 98,
      "new_text": ""
    },
    {
      "col_end": 12,
      "col_start": 0,
      "line_end": 99,
      "line_start": 99,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 100,
      "line_start": 100,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 102,
      "line_start": 102,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 103,
      "line_start": 103,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 104,
      "line_start": 104,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 105,
      "line_start": 105,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 107,
      "line_start": 107,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 108,
      "line_start": 108,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 109,
      "line_start": 109,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 110,
      "line_start": 110,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 111,
      "line_start": 111,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 113,
      "line_start": 113,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 114,
      "line_start": 114,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 115,
      "line_start": 115,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 117,
      "line_start": 117,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 118,
      "line_start": 118,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 119,
      "line_start": 119,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 120,
      "line_start": 120,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 121,
      "line_start": 121,
      "new_text": ""
    },
    {
      "col_end": 8,
      "col_start": 0,
      "line_end": 122,
      "line_start": 122,
      "new_text": ""
    },
    {
      "col_end": 4,
      "col_start": 0,
      "line_end": 123,
      "line_start": 123,
      "new_text": ""
    }
  ],
  "rename_apply": {
    "apply": {
      "changes": [
        {
          "edits": [
            {
              "col_end": 5,
              "col_start": 4,
              "line_end": 111,
              "line_start": 109,
              "new_text": "RenamedForParityT19"
            }
          ],
          "uri": "file://<BOOK>/examples/coffee-machine/views.sysml"
        }
      ]
    }
  },
  "rename_prepare": {
    "prepare": {
      "col_end": 5,
      "col_start": 4,
      "line_end": 111,
      "line_start": 109,
      "placeholder": "BrewSequenceView"
    }
  },
  "salsa_stats": {
    "executions":<N>,
    "hit_ratio":<F>,
    "validations":<N>
  },
  "salsa_stats_reset": {
    "status": "reset"
  },
  "workspace_files_depth_2": {
    "entries": [
      {
        "name": "actions.sysml",
        "path": "<BOOK>/examples/coffee-machine/actions.sysml",
        "type": "file"
      },
      {
        "name": "brew-cycle-flow.sysml",
        "path": "<BOOK>/examples/coffee-machine/brew-cycle-flow.sysml",
        "type": "file"
      },
      {
        "name": "calculations.sysml",
        "path": "<BOOK>/examples/coffee-machine/calculations.sysml",
        "type": "file"
      },
      {
        "name": "connections.sysml",
        "path": "<BOOK>/examples/coffee-machine/connections.sysml",
        "type": "file"
      },
      {
        "name": "definitions.sysml",
        "path": "<BOOK>/examples/coffee-machine/definitions.sysml",
        "type": "file"
      },
      {
        "name": "demo-analysis.sysml",
        "path": "<BOOK>/examples/coffee-machine/demo-analysis.sysml",
        "type": "file"
      },
      {
        "name": "flows.sysml",
        "path": "<BOOK>/examples/coffee-machine/flows.sysml",
        "type": "file"
      },
      {
        "name": "metadata.sysml",
        "path": "<BOOK>/examples/coffee-machine/metadata.sysml",
        "type": "file"
      },
      {
        "name": "orchestration.sysml",
        "path": "<BOOK>/examples/coffee-machine/orchestration.sysml",
        "type": "file"
      },
      {
        "name": "package-structure.sysml",
        "path": "<BOOK>/examples/coffee-machine/package-structure.sysml",
        "type": "file"
      },
      {
        "name": "ports-and-interfaces.sysml",
        "path": "<BOOK>/examples/coffee-machine/ports-and-interfaces.sysml",
        "type": "file"
      },
      {
        "name": "requirements.sysml",
        "path": "<BOOK>/examples/coffee-machine/requirements.sysml",
        "type": "file"
      },
      {
        "name": "states.sysml",
        "path": "<BOOK>/examples/coffee-machine/states.sysml",
        "type": "file"
      },
      {
        "name": "typing-and-specialization.sysml",
        "path": "<BOOK>/examples/coffee-machine/typing-and-specialization.sysml",
        "type": "file"
      },
      {
        "name": "views.sysml",
        "path": "<BOOK>/examples/coffee-machine/views.sysml",
        "type": "file"
      }
    ],
    "root": "<BOOK>/examples/coffee-machine"
  },
  "workspace_refresh_empty": {
    "projects": [],
    "roots_count": 0,
    "stdlib_loaded": false
  }
}
